// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledButton should render correctly on iOS the button with type danger 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "borderRadius": 6,
        "borderWidth": 2,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "backgroundColor": "#D73A49",
        "borderColor": "#D73A49",
      },
      Object {},
      undefined,
    ]
  }
  disabledContainerStyle={null}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    Array [
      Object {
        "fontFamily": "Roboto",
        "fontSize": 14,
        "fontWeight": "600",
        "textAlign": "center",
      },
      Object {
        "color": "#FFFFFF",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type default 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "borderRadius": 6,
        "borderWidth": 2,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#bbc0c5",
      },
      Object {},
      undefined,
    ]
  }
  disabledContainerStyle={null}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    Array [
      Object {
        "fontFamily": "Roboto",
        "fontSize": 14,
        "fontWeight": "600",
        "textAlign": "center",
      },
      Object {
        "color": "#6a737d",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type primary 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "borderRadius": 6,
        "borderWidth": 2,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "backgroundColor": "#037dd6",
        "borderColor": "#037dd6",
        "minHeight": 50,
      },
      Object {},
      undefined,
    ]
  }
  disabledContainerStyle={null}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    Array [
      Object {
        "fontFamily": "Roboto",
        "fontSize": 14,
        "fontWeight": "600",
        "textAlign": "center",
      },
      Object {
        "color": "#FFFFFF",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type secondary 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "borderRadius": 6,
        "borderWidth": 2,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "backgroundColor": "#FFFFFF",
        "borderColor": "#75c4fd",
      },
      Object {},
      undefined,
    ]
  }
  disabledContainerStyle={null}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    Array [
      Object {
        "fontFamily": "Roboto",
        "fontSize": 14,
        "fontWeight": "600",
        "textAlign": "center",
      },
      Object {
        "color": "#037dd6",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;
